[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honest-vies-mcp"
version = "0.1.0"
description = "Local MCP server for EU VIES VAT number validation — no key, no cloud middle."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Bartosz Kuć", email = "firma@bartosza.pl" }]
keywords = ["mcp", "vies", "vat", "eu", "tax", "vies-vat", "invoice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/bartosz-kuc/honest-vies-mcp"
Repository = "https://github.com/bartosz-kuc/honest-vies-mcp"
Issues = "https://github.com/bartosz-kuc/honest-vies-mcp/issues"

[project.scripts]
honest-vies-mcp = "honest_vies_mcp:sync_main"

[tool.hatch.build.targets.wheel]
sources = ["."]
only-include = ["server.py"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "honest_vies_mcp.py"

[tool.hatch.build.targets.sdist]
include = ["server.py", "README.md", "LICENSE", "SECURITY.md", "pyproject.toml"]
